--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "@capacitor/local-notifications": "^7.0.0",
     "@ionic/react": "^8.7.11",
     "@ionic/react-router": "^8.7.11",
     "@radix-ui/react-popover": "^1.1.15",
